--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,7 @@ textarea, select {
 /* about us */
 
 .pages__hero {
-    padding-top: 380px;
+    padding-top: 65%;
     padding-bottom: 20px;
 }
 
